dbent-derive/tests/ui/entity_key_not_first.rs
use dbent::prelude::*;

#[derive(Entity)]
struct Test {
    data: String,
    id: Key<Int>,
}

fn main() {}
